# fastapi_clean_architecture

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml  setup.cfg  todo.txt
alembic/: env.py
alembic/versions/: 38e167e43592_.py  d2d5c3474b41_main_table.py
app/: main.py
app/boot/: engine.py  tables.py
app/routes/: auth.py
data/repositories/: SqlAlchemyRepoImpl.py  auth_repository.py
data/utils/: bearer.py  elasticemail.py  jwt_handler.py  response_object.py  verification_email.html
domain/entities/: user.py
domain/repositories/: AuthenticationRepo.py  AuthenticationUsecaseRepo.py  auth_repositories.py
domain/usecases/: AuthenticationUsecase.py  auth_usecase.py
public/templates/: 404.html  405.html
requirements/: fastapi_clean_pkg-0.1.0-py3-none-any.whl
scripts/: check.sh
src/alembic/versions/: 7665a7afd898_.py
src/app/boot/: engine.py  tables.py
src/data/utils/: jwt_handler.py
src/domain/entities/: user.py
src/requirements/: pkg.whl
