[tool.isort]
profile = "black"
line_length = 79
skip = 'alembic'

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Cavin Pabua <cavinpabua28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pre-commit = "^2.14.0"
flake8 = "^3.9.2"
black = "^21.7b0"
PyJWT = "^2.1.0"
Jinja2 = "^3.0.1"
SQLAlchemy = "^1.4.23"
alembic = "^1.6.5"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-server = "app.main:start"

[tool.poe.tasks]
start = { "shell" = "poetry run alembic upgrade head & poetry run run-server" }
install = { "shell" = "poetry run pre-commit install & poetry run pre-commit run --all-files" }
